--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,21 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootcamp</title>
+    <!-- <link rel="manifest" href="./manifest.json" /> -->
+    <link rel="icon" sizes="16x16" href="./icon/favicon-16x16.png" />
+    <link rel="icon" sizes="32x32" href="./icon/favicon-32x32.png" />
+    <link rel="icon" sizes="96x96" href="./icon/favicon-96x96.png" />
+    <link rel="icon" sizes="192x192" href="./icon/android-icon-192x192.png" />
+    <meta
+      name="msapplication-square192x192logo"
+      content="./icon/android-icon-192x192.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./icon/apple-icon-180x180.png"
+    />
+    <title>Redberry Resume</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
